# vanguard

./: .gitignore  README.md  pyproject.toml
vanguard/: main.py  middleware.py  startup.py
vanguard/routes/: page.html
vanguard/static/: 404.html  app.html
vanguard/static/vanguard/: env.js  py-worker.js  routing.js  webworker.js
