[tool.poetry]
name = "vanguard"
version = "0.1.0"
description = ""
authors = ["karl robeck alferez <karlalferezfx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypox = "^1.4.1"
jinja2 = "^3.1.2"
pyodide-py = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
